@@ -535,19 +535,24 @@ ags_sequencer_editor_reset(AgsApplicable *applicable)
     //FIXME:JK: work-around for alsa-handle
     tmp = card_id->data;
     
-    if(use_alsa){
+    if(card_id->data != NULL &&
+       use_alsa){
       tmp = g_strdup_printf("%s,0",
 			    card_id->data);
     }
     
-    if(!g_ascii_strcasecmp(tmp,
+    if(tmp != NULL &&
+       device != NULL &&
+       !g_ascii_strcasecmp(tmp,
 			   device)){
       found_card = TRUE;
     }
 
-    gtk_combo_box_text_append_text(sequencer_editor->card,
-				   tmp);
-
+    if(tmp != NULL){
+      gtk_combo_box_text_append_text(sequencer_editor->card,
+				     tmp);
+    }
+    
     if(use_alsa){
       g_free(tmp);
     }
@@ -670,8 +675,10 @@ ags_sequencer_editor_add_jack(AgsSequencerEditor *sequencer_editor,
   gtk_list_store_clear(GTK_LIST_STORE(gtk_combo_box_get_model(GTK_COMBO_BOX(sequencer_editor->card))));
 
   while(card_uri != NULL){
-    gtk_combo_box_text_append_text(sequencer_editor->card,
-    				   card_uri->data);
+    if(card_uri->data != NULL){
+      gtk_combo_box_text_append_text(sequencer_editor->card,
+				     card_uri->data);
+    }
     
     card_uri = card_uri->next;
   }
@@ -951,9 +958,10 @@ ags_sequencer_editor_load_jack_card(AgsSequencerEditor *sequencer_editor)
   gtk_list_store_clear(GTK_LIST_STORE(gtk_combo_box_get_model(GTK_COMBO_BOX(sequencer_editor->card))));
 
   while(card_id != NULL){
-    gtk_combo_box_text_append_text(sequencer_editor->card,
-				   card_id->data);
-
+    if(card_id->data != NULL){
+      gtk_combo_box_text_append_text(sequencer_editor->card,
+				     card_id->data);
+    }
     
     card_id = card_id->next;
   }
@@ -1002,9 +1010,10 @@ ags_sequencer_editor_load_alsa_card(AgsSequencerEditor *sequencer_editor)
   gtk_list_store_clear(GTK_LIST_STORE(gtk_combo_box_get_model(GTK_COMBO_BOX(sequencer_editor->card))));
 
   while(card_id != NULL){
-    gtk_combo_box_text_append_text(sequencer_editor->card,
-				   card_id->data);
-
+    if(card_id->data != NULL){
+      gtk_combo_box_text_append_text(sequencer_editor->card,
+				     card_id->data);
+    }
     
     card_id = card_id->next;
   }
@@ -1062,9 +1071,10 @@ ags_sequencer_editor_load_oss_card(AgsSequencerEditor *sequencer_editor)
   gtk_list_store_clear(GTK_LIST_STORE(gtk_combo_box_get_model(GTK_COMBO_BOX(sequencer_editor->card))));
 
   while(card_id != NULL){
-    gtk_combo_box_text_append_text(sequencer_editor->card,
-				   card_id->data);
-
+    if(card_id->data != NULL){
+      gtk_combo_box_text_append_text(sequencer_editor->card,
+				     card_id->data);
+    }
     
     card_id = card_id->next;
   }
