@@ -1456,9 +1456,11 @@ ags_live_lv2_bridge_load_preset(AgsLiveLv2Bridge *live_lv2_bridge)
   list = lv2_plugin->preset;
 
   while(list != NULL){
-    gtk_combo_box_text_append_text(live_lv2_bridge->preset,
-				   AGS_LV2_PRESET(list->data)->preset_label);
-
+    if(AGS_LV2_PRESET(list->data)->preset_label != NULL){
+      gtk_combo_box_text_append_text(live_lv2_bridge->preset,
+				     AGS_LV2_PRESET(list->data)->preset_label);
+    }
+    
     list = list->next;
   }
 
