@@ -1,3 +1,8 @@
+ags (0.9.15)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing check for NULL of gtk_combo_box_text_append_text() parameter in all source code
+
 ags (0.9.14)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
